# reddit2discord

./: README.md  cabal.project  reddit2discord.cabal
app/: Main.hs
