cabal-version:      2.4
name:               reddit2discord
version:            1.0.0.0

-- A short (one-line) description of the package.
synopsis: Reddit / Discord bridge to monitor and reply to comments on a given post

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com

executable r2d
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0, reddit-oauth2, discord-haskell, text
    hs-source-dirs:   app
    default-language: Haskell2010
